fixed title styling so it doesn't overlap with the image

--- a/frontend/src/pages/DocumentationPage.css
+++ b/frontend/src/pages/DocumentationPage.css
@@ -12,7 +12,8 @@ body {
 
 .background-gif {
     width: 100%; /* Set width to 100% of the viewport */
-    height: 600px; /* Adjust height as needed */
+    height: 325px; /* Adjust height as needed */
+    min-height: 300px;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5)), url('../assets/documentationBackground.jpeg'); /* Specify the correct path to your GIF */
     background-size: cover;
     background-position: center;
@@ -20,6 +21,7 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
+    padding-bottom: 20px;
 }
 
 
@@ -30,10 +32,13 @@ body {
 
 .title {
     text-align: center;
+    position: relative;
     color: black;
     font-size: 4rem;
     font-family: 'Georgia', serif; /* Example grand font */
-    margin-top: 35vw; /* Adjust as needed */
+    margin-top: 350px;
+    z-index: 1; /* Adjust as needed */
+    padding: 20px;
 }  
 
 .content {
@@ -55,8 +60,3 @@ body {
     line-height: 1.6;
 }
 
-@media (max-width: 1200px) {
-    .background-gif {
-        height: 50px; /* Adjust height for smaller screens */
-    }
-}
